@@ -1102,3 +1102,5 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
       dc1394_capture_get_fileno ().  It does this by using a separate thread
       for capture.
     * SVN 345: Added support for 800 Mb speeds to Mac OS X (Thanks Mark Munte)
+    * SVN 346: Added new function dc1394_reset_bus() and a command-line
+      utility called dc1394_reset_bus that will..... reset the bus.
